more bug squashes

--- a/app/sass/styles.scss
+++ b/app/sass/styles.scss
@@ -466,7 +466,6 @@ a {
      text-align:center;
      z-index: 1000;
      opacity: .8;
-     background-image:image(../signupbg.png);
 }
 
 #overlay div {
